--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "@mdx-js/tag": "^0.16.6",
     "gatsby": "^2.0.83",
     "gatsby-image": "^2.0.20",
-    "gatsby-mdx": "^0.3.2",
+    "gatsby-mdx": "^0.3.3-ci.249",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-offline": "^2.0.20",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.10",
     "prismjs": "^1.15.0",
@@ -27,6 +26,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "clean-develop": "rm -rf .cache; gatsby develop",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
